<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg">
    <android.support.v7.widget.Toolbar
        android:id="@+id/id_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/white"
        android:paddingTop="@dimen/toolbar_pading_top"
        android:theme="@style/toolbar_style">

        <TextView
            android:id="@+id/id_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/C3"
            android:textSize="16sp"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_alignParentBottom="true"
                  android:layout_marginLeft="23dp"
                  android:layout_marginRight="23dp"
                  android:layout_marginBottom="27dp"
                  android:orientation="vertical">
        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:background="@drawable/drawable_button_bg"
            android:text="@string/common_next"
            android:layout_marginBottom="30dp"
            android:textColor="@drawable/drawable_button_text_color"
            tools:text="@string/confirm"
        />
        <TextView android:layout_width="match_parent"
                  android:textColor="@color/C3"
                  android:gravity="center"
                  android:text="@string/forget_your_password"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="match_parent"
                  android:textColor="@color/C3"
                  android:gravity="center"
                  android:text="@string/the_import_mnemonic_can_reset_the_password"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="match_parent"
                  android:textColor="@color/white"
                  android:gravity="center"
                  android:textSize="14sp"
                  android:layout_marginTop="10dp"
                  android:text="@string/immediately_the_import"
                  android:layout_height="wrap_content"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/next"
        android:layout_below="@id/id_toolbar"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="33dp"/>
            <TextView
                android:id="@+id/input_seed_hint"
                style="@style/text_init_wallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/the_old_password"/>
            <io.samos.wallet.widget.SamosEditText
                android:id="@+id/seed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ettes_and_digits"
                android:textColor="@color/C2"
                android:textSize="14sp"/>
            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="21dp"/>
            <TextView
                style="@style/text_init_wallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pin_create_wallet_name"/>
            <io.samos.wallet.widget.SamosEditText
                android:id="@+id/wallet_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ettes_and_digits"
                android:textSize="14sp"
                android:textColor="@color/C2"/>
            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="21dp"/>
            <TextView
                style="@style/text_init_wallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"/>
            <io.samos.wallet.widget.SamosEditText
                android:id="@+id/wallet_pwd_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/ettes_and_digits"
                android:textSize="14sp"
                android:textColor="@color/C2"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>