<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:id="@+id/image_top"
        android:src="@drawable/logo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wallet_create_tips"
        android:textSize="14dp"
        android:lineSpacingMultiplier="1.2"
        android:gravity="center"
        android:id="@+id/txt_hint"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/image_top"
        android:textColor="@color/C2"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="41dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:id="@+id/create_wallet"
        android:layout_above="@+id/import_wallet"
        android:layout_marginBottom="22dp"
        android:textColor="@drawable/drawable_button_text_color"
        android:background="@drawable/drawable_button_bg"
        android:text="@string/wallet_creat_title"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="41dp"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/import_wallet"
        android:layout_above="@+id/tv_samos_reserved"
        android:layout_marginBottom="70dp"
        android:textColor="@drawable/drawable_button_text_color"
        android:background="@drawable/drawable_button_bg"
        android:text="@string/load_wallet"/>
    <TextView
        android:id="@+id/tv_samos_reserved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:layout_centerHorizontal="true"
        android:textSize="10dp"
        android:textColor="@color/text_color_alright"
        android:text="@string/alright_reserved"/>
</RelativeLayout>