<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="5dp"

    android:layout_height="match_parent"
    >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin_create_wallet_name"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <EditText
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/mobile_name"
            android:singleLine="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/common_edit_radio_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/choose_coin_type"
            android:visibility="gone"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <Spinner
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/common_edit_radio_bg"
            android:id="@+id/select_coin_type"
            android:visibility="gone"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/pin_create_wallet_seed"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <EditText
            android:editable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:gravity="top"
            android:id="@+id/ed_seed"
            android:background="@drawable/common_edit_radio_bg"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/pin_create_wallet_seed_verify"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <EditText
            android:layout_width="match_parent"
            android:minHeight="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:gravity="top"
            android:maxLines="3"
            android:id="@+id/confirm_seed"
            android:background="@drawable/common_edit_radio_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:id="@+id/generate_seed"
            android:background="@drawable/bg_button_generate_seed"
            android:textColor="@android:color/white"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:text="@string/generate_seed"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <TextView
                    android:id="@+id/next"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:layout_gravity="bottom|center_horizontal"
                    android:background="@drawable/common_next_bg"
                    android:layout_width="150dp"
                    android:text="@string/common_next"
                    android:layout_height="50dp" />
        </FrameLayout>

</LinearLayout>